# digital_twin_factory

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.ci.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 0001_initial_placeholder.py  0002_identity_rbac.py  0003_factory_schema.py  0004_machine_metrics.py  0005_monitoring_alerts.py  0006_prediction_maintenance.py  0007_notifications.py
docker/api/: Dockerfile
docker/postgres/: init.sql
docker/redis/: redis.conf
docker/worker/: Dockerfile
docs/api/: rest-api-spec.md  use-cases.md
docs/architecture/: ADR-001-clean-architecture.md  ADR-002-event-driven-architecture.md  ADR-003-multi-tenancy.md  ADR-004-cqrs-strategy.md  ADR-005-authentication-strategy.md  bounded-contexts.md  event-storming.md  overview.md
docs/database/: schema.md
docs/deployment/: git-workflow.md  github-actions.md  kubernetes-future.md
docs/infrastructure/: celery-tasks.md  docker-architecture.md  redis-strategy.md  websocket-architecture.md
docs/operations/: error-handling.md  logging-strategy.md  monitoring-architecture.md
docs/security/: rbac.md  security-strategy.md
docs/testing/: testing-strategy.md
src/application/: __init__.py
src/application/commands/: __init__.py
src/application/dto/: __init__.py  auth.py  factory.py  monitoring.py  notification.py  prediction.py
src/application/handlers/: __init__.py
src/application/interfaces/: __init__.py
src/application/queries/: __init__.py
src/domain/: __init__.py
src/domain/factory/: __init__.py  enums.py  events.py  factory.py  machine.py  production_line.py
src/domain/identity/: __init__.py  events.py  roles.py  tenant.py  user.py  value_objects.py
src/domain/monitoring/: __init__.py  alert.py  enums.py  events.py  threshold_evaluator.py
src/domain/notification/: __init__.py  enums.py  events.py  notification.py
src/domain/prediction/: __init__.py  enums.py  events.py  failure_predictor.py  maintenance_record.py  (+1 more)
src/infrastructure/: __init__.py
src/presentation/: __init__.py  main.py
tests/: conftest.py
tests/e2e/: __init__.py  conftest.py  test_health_live.py  test_onboarding_flow.py
tests/helpers/: auth.py
tests/integration/: __init__.py  conftest.py  test_auth.py
tests/unit/: __init__.py  test_alerts_api.py  test_auth_api.py  test_auth_security.py  test_factory_api.py  test_health.py  test_notifications_api.py  test_prediction_api.py  test_redis_channels.py  test_websocket_auth.py
(+94 files in other folders)
